sort.basic.gnome.AlgGnomeSort.scala.error
Erreur de compilation :
AlgGnomeSort:3: error: not found: value n
  n = getNombreValeurs()
  ^AlgGnomeSort:15: error: not found: value n
  } while (i != n-1)
                ^